syntax = "proto3";
package moxnotify.scheduler;

import "types.proto";

service SchedulerService {
    rpc StreamNotifications (SchedulerSubscribeRequest) returns (stream moxnotify.types.NotificationMessage);
    rpc NotificationClosed (SchedulerNotificationClosedRequest) returns (SchedulerNotificationClosedResponse);
}

message SchedulerSubscribeRequest {}

message SchedulerNotificationClosedRequest {
  moxnotify.types.NotificationClosed notification_closed = 1;
}

message SchedulerNotificationClosedResponse {}
